updates, choropleth map

--- a/html/index_us.html
+++ b/html/index_us.html
@@ -35,9 +35,9 @@
   <script type="text/javascript" src="js/config.js"></script>
   <!-- Our JavaScript -->
   <!-- Below we have US_Chloropleth and us_population_logic. You'll have to comment those out to see the global maps.-->
-  <!--<script type="text/javascript" src="js/US_Choropleth.js"></script>
+  <script type="text/javascript" src="js/US_Choropleth.js"></script>
   <script type="text/javascript" src="js/us_population_logic.js"></script>-->
-  <script type="text/javascript" src="js/world_choropleth.js"></script>
+  <!--<script type="text/javascript" src="js/world_choropleth.js"></script>
   <script type="text/javascript" src="js/world_logic.js"></script>-->
   <!--<script type="text/javascript" src="js/logic_L_geoJSON.js"></script>-->
 
