--- a/html/index_globe.html
+++ b/html/index_globe.html
@@ -20,10 +20,12 @@
 <body>
 
   <!-- The div that holds our map -->
-  <svg id = "myMap" width="700" height="600"></svg>
+  <svg id = "myMap" width="1500" height="1300"></svg>
 
   <!-- D3 -->
   <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://d3js.org/d3-interpolate.v2.min.js"></script>
+  <script src="https://d3js.org/d3-scale-chromatic.v2.min.js"></script>
   <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
     integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
